...
                            margin: const EdgeInsets.all(88.0),
                          );
                          return;
                        }

                        Get.snackbar(
                          "Chamada",
                          "Chamada iniciada com sucesso!",
                          snackPosition: SnackPosition.BOTTOM,
                          margin: const EdgeInsets.all(88.0),
                        );
                        Get.offAllNamed(
                          AppRoutes.currentAttendance,
                          arguments: {
                            "currentAttendance": attendance,
                          },
                        );
                      },
                      child: const Text("Confirmar"),
                    ),
                  ],
                );
              },
            );
          },
...
