class ValidatorAdapter {
  String? validateNotNullInput(String? value) {
    if (value == null || value.isEmpty) {
      return "O campo é obrigatório";
    }

    return null;
  }

  String? validateNotNull(dynamic value) {
...
