...
                resizeToAvoidBottomInset: false,
                appBar: AppBar(
                  automaticallyImplyLeading: false,
                  centerTitle: true,
                  title: controller.userType != UserType.professor
                      ? const Text(
                          "Chamada Inteligente",
                          style: TextStyle(
                            fontSize: 24.0,
                            fontWeight: FontWeight.w700,
                            fontFamily: "Quicksand",
                          ),
                        )
...
